tdf#66353: fix converting relative sw table formula back to box

The check was incorrect: it invariantly checked only first part
of formula, and thus gave wrong results when the relative represen-
tation of formula contained external reference in usual box form.

BTW, I don't know why there's hardcoded return of "A1" on error
in SwTableFormula::RelNmsToBoxNms? Isn't that dangerous to provide
an arbitrary valid result that may give unnoticed wrong calculation?

Change-Id: If17c0f9459c64e65a6c2b8ed4482ffee78f115b2
Reviewed-on: https://gerrit.libreoffice.org/15678
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>